<resources>
    <string name="app_name">Hockey_tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_app">App</string>
    <string name="menu_previous_matches">Previous Matches</string>
    <string name="menu_new_match">New Match</string>
    <string name="menu_home">Home</string>
    <string name="menu_rules">Rules</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_info">Info</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home_team_crest" translatable="true">Home Team Crest</string>
    <string name="away_team_crest" translatable="true">Away Team Crest</string>
    <string name="save_match">Save Match</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="new_match">New Match</string>
</resources>
