<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_new-match"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_new_match" />
        <item
            android:id="@+id/nav_previous_match"
            android:icon="@drawable/ic_menu_previous_matches"
            android:title="@string/menu_previous_matches" />
        <item
            android:id="@+id/nav_rules"
            android:icon="@drawable/ic_menu_rules"
            android:title="@string/menu_rules" />
    </group>

    <item android:title="@string/menu_app">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_menu_info"
                android:title="@string/menu_info" />
        </menu>
    </item>

</menu>
